<resources>
    <string name="app_name">GakuseiRead4</string>
    <string name="waon_viewer">WAON番号 Viewer</string>
    <string name="idm">IDm:</string>
    <string name="pmm">PMm:</string>
    <string name="waon">WAON番号:</string>
    <string name="start_polling">Start Polling</string>
    <string name="stop_polling">Stop Polling</string>
    <string name="gakuseki">学籍番号</string>
    <string name="gakuyomi">学籍番号を読み込む</string>
</resources>
